[package]
name = "trillium-example-app"
version = "0.1.0"
edition = "2018"

[dependencies]
trillium = "0.2.8"
trillium-compression = "0.1.0"
trillium-conn-id = "0.2.1"
trillium-cookies = "0.4.0"
trillium-head = "0.2.0"
trillium-logger = "0.4.2"
trillium-method-override = "0.2.0"
trillium-router = "0.3.5"
trillium-smol = "0.3.0"

[dev-dependencies]
trillium-testing = { version = "0.4.2", features = ["smol"] }
